--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vandanagitprojects.github.io/TextUtilsReact/",
   "name": "my_app",
   "version": "0.1.0",
   "private": true,
